# nats-sinks

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  ROBOTS.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-crypto.txt  requirements-dev.txt  requirements-docs.txt  requirements-oci.txt  requirements-oracle.txt  requirements-test.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-pr.yml  backlog-sync.yml  bug-report-sync.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  pages.yml  pr-governance.yml  release.yml
backlog/: README.md  example-backlog-item.json
backlog/items/: ack-confirmation-metrics-runbook.json  ackterm-acknext-evaluation.json  additional-observability-connectors.json  amazon-cloudwatch-observability-connector.json  amazon-documentdb-sink.json  amazon-kinesis-sink.json  amazon-redshift-sink.json  apache-druid-sink.json  apache-iceberg-lakehouse-sink.json  apache-ignite-gridgain-sink.json  azure-blob-data-lake-sink.json  azure-cosmosdb-sink-profiles.json  azure-event-hubs-sink.json  azure-monitor-observability-connector.json  azure-synapse-fabric-sink.json  bigquery-sink.json  cassandra-sink.json  certified-nats-auth-workflows.json  confirmed-ack-after-sink-success.json  confirmed-dlq-ack-after-publication.json  core-routing-fanout-sink.json  cross-domain-handoff-package-mode.json  data-centric-security-label-profile.json  data-warehouse-specialty-sinks.json  databricks-sink.json  datadog-observability-connector.json  defence-use-case-blueprints.json  disconnected-backend-spool-replay-e2e.json  distributed-sql-database-sinks-evaluation.json  docker-image-hardening.json  docker-image-release-publishing.json  docker-image.json  durable-replay-to-sinks-guidance.json  edge-spool-and-forward-mode.json  elastic-observability-connector.json  elasticsearch-opensearch-sink.json  encryption-key-rotation-secret-manager-patterns.json  event-freshness-staleness-metrics.json  f2t2ea-event-phase-tagging-profile.json  fanout-partial-failure-recovery-metrics.json  (+116 more)
bugs/reports/: backlog-json-duplicate-keys.json  backlog-json-nonstandard-constants.json  bug-github-dependency-sync-issue-id-type.json  bug-report-json-duplicate-keys.json  bug-report-json-nonstandard-constants.json  config-json-nonstandard-constants.json  container-e2e-suite-dataclass-import.json  dependency-review-node20-runtime.json  docker-local-smoke-port-permission-traceback.json  encryption-envelope-json-duplicate-keys.json  encryption-envelope-json-nonstandard-constants.json  envelope-control-header-name.json  envelope-empty-header-name.json  file-path-sanitizer-str-conversion.json  foundry-http-urlopen-bandit-b310.json  http-nginx-e2e-capture-copy-readiness.json  http-nginx-e2e-certification-envelope-argument.json  http-nginx-fips-tmpfs-runtime-dirs.json  http-routing-target-type-missing.json  load-profile-nonfinite-json-output.json  load-profile-phase-rate-counts.json  message-metadata-classification-rule-control.json  message-metadata-label-default-control.json  message-metadata-label-semicolon-list.json  message-metadata-labels-header-control.json  message-metadata-priority-default-control.json  message-metadata-priority-header-control.json  metadata-epoch-nanosecond-precision.json  metrics-cli-ci-type-check.json  metrics-snapshot-nonfinite-values.json  mission-metadata-allowed-profile-control.json  mission-metadata-json-nonstandard-constants.json  mission-support-nav-tree-discoverability.json  mkdocs-shared-site-build-collision.json  nats-consumer-negative-metadata.json  nats-creds-auth-conflict.json  nats-monitoring-json-duplicate-keys.json  nats-monitoring-nonfinite-json.json  nats-password-without-user.json  nats-primary-url-scheme-validation.json  (+62 more)
docs/: acknowledgement-confirmation.md  architecture.md  available-today.md  azure-monitor.md  backlog-management.md  branch-workflow.md  cli.md  cloudwatch.md  coherence-sink.md  commit-then-ack.md  configuration.md  container-hardening.md  datadog.md  dead-letter-queues.md  dependency-management.md  development.md  disconnected-spool-replay-testing.md  docker.md  durable-replay-to-sinks.md  elastic-observability.md  file-sink.md  foundry-sink.md  getting-started.md  github-pages.md  goldengate-sink-candidate-research.md  gotham-sink.md  grafana-alloy.md  hash-verified-installs.md  headers-only-delivery.md  http-nginx-test-container.md  http-sink.md  idempotency.md  in-progress-evaluation.md  index.md  inprogress-metrics-runbook.md  jetstream-topology.md  kubernetes.md  lineage-query-helpers.md  message-authenticity.md  message-sizing.md  (+51 more)
docs/adr/: 0001-core-owns-delivery-semantics.md  0002-commit-then-acknowledge.md  0003-oracle-first-sink.md  0004-single-repository-single-namespace.md  0005-ackterm-acknext-evaluation.md
examples/: docker-compose.nats.json  docker-compose.oracle.json
scripts/: apply-branch-protection.sh  approve-non-main-pr.py  approve-non-main-pr.sh  check-docs.sh  check-encryption.sh  check-gh-auth.sh  check-markdown-links.py  check-sinks.sh  check-version-consistency.py  check.sh  close-released-backlog-issues.py  close-released-bug-issues.py  comment-backlog-issue.py  comment-bug-issue.py  format.sh  generate-checksums.py  github_issue_planning.py  install-systemd-debian.sh  install-systemd-oracle-linux.sh  install-systemd.sh  lint.sh  mark-completed-acceptance.py  merge-pr-with-comment.py  nats-live-probe.py  open-release-pr.sh  release-build.sh  run-coherence-sink-e2e.py  run-container-e2e-suite.py  run-docker-local-smoke.py  run-http-sink-nginx-e2e.py  run-load-profile.py  run-load-profile.sh  run-local-mvp-demo.sh  run-multi-sink-routing-e2e.py  run-mysql-sink-e2e.py  run-oracle-benchmark.py  run-oracle-benchmark.sh  run-oracle-coherence-container-smoke.py  run-oracle-e2e.sh  run-oracle-mysql-container-smoke.py  (+16 more)
tests/: conftest.py
(+367 files in other folders)
