[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nats-sinks"
version = "0.4.0"
description = "Production-ready outbound sink connectors for NATS JetStream."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Johan Louwers", email = "louwersj@gmail.com" }
]
keywords = ["nats", "jetstream", "sink", "oracle", "file", "messaging", "etl", "streaming"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: System :: Distributed Computing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "nats-py>=2.7,<3",
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
crypto = [
  "cryptography>=42,<49",
]
oracle = [
  "oracledb>=2.3,<5",
]
test = [
  "cryptography>=42,<49",
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=5,<8",
]
dev = [
  "bandit[toml]>=1.7,<2",
  "build>=1.2,<2",
  "cryptography>=42,<49",
  "cyclonedx-bom>=6,<8",
  "mypy>=1.10,<3",
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "twine>=5.1,<7",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "pymdown-extensions>=10.9,<11",
]
all = [
  "nats-sinks[crypto,oracle]",
]

[project.urls]
Homepage = "https://github.com/ProjectCuillin/nats-sinks/"
Documentation = "https://nats-sinks.readthedocs.io/en/latest/"
"GitHub Pages" = "https://projectcuillin.github.io/nats-sinks/"
Changelog = "https://github.com/ProjectCuillin/nats-sinks/blob/main/CHANGELOG.md"
Issues = "https://github.com/ProjectCuillin/nats-sinks/issues"
Source = "https://github.com/ProjectCuillin/nats-sinks/"

[project.scripts]
nats-sink = "nats_sinks.cli.main:app"
nats-sink-metrics = "nats_sinks.cli.metrics:app"
nats-sink-observe = "nats_sinks.cli.observability:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nats_sinks"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PL", "RUF", "S", "T20", "UP", "W"]
ignore = [
  "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"examples/**/*.py" = ["T201"]
"scripts/nats-live-probe.py" = ["S105", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
packages = ["nats_sinks"]

[[tool.mypy.overrides]]
module = ["nats.*", "oracledb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: tests that require external services such as NATS or Oracle",
]

[tool.coverage.run]
branch = true
source = ["nats_sinks"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.bandit]
skips = ["B101"]
